# CMakeLibraryExample

./: CMakeLists.txt  README.md
TestApplications/: CMakeLists.txt
TestApplications/TestLibraryExample0/: CMakeLists.txt
lib/LibA/: CMakeLists.txt  lib.cxx  lib.h
lib/LibB/: CMakeLists.txt
lib/LibB/Include/: MathLibrary.h
