add_library(${PROJECT_NAME}LibA lib.cxx lib.h)
target_include_directories(${PROJECT_NAME}LibA PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})

include(GenerateExportHeader) 

GENERATE_EXPORT_HEADER( ${PROJECT_NAME}LibA
             BASE_NAME ${PROJECT_NAME}
             EXPORT_MACRO_NAME ${PROJECT_NAME}_EXPORT
             EXPORT_FILE_NAME ${PROJECT_NAME}_Export.h
             STATIC_DEFINE ${PROJECT_NAME}_BUILT_AS_STATIC
)

